--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "mobx": "^6.7.0",
+    "mobx-state-tree": "^5.1.7",
+    "mobx-vue-lite": "^0.3.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
@@ -52,7 +55,12 @@
       "ecmaVersion": 2020
     },
     "rules": {
-      "max-len": "off"
+      "max-len": "off",
+      "no-useless-catch": "off",
+      "consistent-return": "off",
+      "func-names": "off",
+      "import/prefer-default-export": "off",
+      "no-use-before-define": "off"
     }
   },
   "browserslist": [
